--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "react-dom": "^16.0.0"
   },
   "devDependencies": {
+    "@lonord/electron-renderer-ts-compiler": "^1.1.2",
+    "@types/node": "^9.4.6",
     "@types/react": "^16.0.38",
+    "electron": "^1.8.2",
+    "electron-devtools-installer": "^2.2.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "rimraf": "^2.6.2",
