--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@lonord/electron-renderer-ts-compiler": "^1.1.2",
     "@types/node": "^9.4.6",
     "@types/react": "^16.0.38",
+    "@types/react-dom": "^16.0.4",
     "electron": "^1.8.2",
     "electron-devtools-installer": "^2.2.3",
     "react": "^16.2.0",
